--- a/cifar10.ipynb
+++ b/cifar10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,13 @@
     "from tensorflow.keras.layers import Dense\n",
     "import sys\n",
     "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +138,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,40 +179,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-04 09:19:13.016901: W tensorflow/tsl/framework/cpu_allocator_impl.cc:82] Allocation of 614400000 exceeds 10% of free system memory.\n"
+      "2023-07-04 11:14:32.846124: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "2023-07-04 11:14:32.847033: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-07-04 11:14:32.849511: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n",
+      "2023-07-04 11:14:34.459270: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:116] None of the MLIR optimization passes are enabled (registered 2)\n",
+      "2023-07-04 11:14:34.462730: I tensorflow/core/platform/profile_utils/cpu_utils.cc:112] CPU Frequency: 2499950000 Hz\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "782/782 [==============================] - 98s 118ms/step - loss: 1.8451 - accuracy: 0.3029 - val_loss: 1.4915 - val_accuracy: 0.4492\n",
-      "Epoch 2/10\n",
-      "782/782 [==============================] - 78s 100ms/step - loss: 1.4493 - accuracy: 0.4707 - val_loss: 1.3601 - val_accuracy: 0.4965\n",
-      "Epoch 3/10\n",
-      "782/782 [==============================] - 78s 100ms/step - loss: 1.2962 - accuracy: 0.5313 - val_loss: 1.1768 - val_accuracy: 0.5688\n",
-      "Epoch 4/10\n",
-      "782/782 [==============================] - 77s 99ms/step - loss: 1.1915 - accuracy: 0.5716 - val_loss: 1.0543 - val_accuracy: 0.6201\n",
-      "Epoch 5/10\n",
-      "782/782 [==============================] - 78s 99ms/step - loss: 1.1127 - accuracy: 0.6022 - val_loss: 1.0536 - val_accuracy: 0.6242\n",
-      "Epoch 6/10\n",
-      "782/782 [==============================] - 78s 100ms/step - loss: 1.0518 - accuracy: 0.6262 - val_loss: 0.9856 - val_accuracy: 0.6532\n",
-      "Epoch 7/10\n",
-      "782/782 [==============================] - 78s 99ms/step - loss: 1.0076 - accuracy: 0.6436 - val_loss: 0.8953 - val_accuracy: 0.6839\n",
-      "Epoch 8/10\n",
-      "782/782 [==============================] - 78s 99ms/step - loss: 0.9659 - accuracy: 0.6592 - val_loss: 0.8959 - val_accuracy: 0.6888\n",
-      "Epoch 9/10\n",
-      "782/782 [==============================] - 81s 104ms/step - loss: 0.9321 - accuracy: 0.6715 - val_loss: 0.8780 - val_accuracy: 0.6938\n",
-      "Epoch 10/10\n",
-      "782/782 [==============================] - 83s 106ms/step - loss: 0.9053 - accuracy: 0.6814 - val_loss: 0.8925 - val_accuracy: 0.6936\n"
+      "Epoch 1/25\n",
+      "782/782 [==============================] - 147s 188ms/step - loss: 2.0279 - accuracy: 0.2246 - val_loss: 1.5170 - val_accuracy: 0.4332\n",
+      "Epoch 2/25\n",
+      "782/782 [==============================] - 155s 198ms/step - loss: 1.5028 - accuracy: 0.4472 - val_loss: 1.2925 - val_accuracy: 0.5298\n",
+      "Epoch 3/25\n",
+      "782/782 [==============================] - 195s 250ms/step - loss: 1.3303 - accuracy: 0.5183 - val_loss: 1.1651 - val_accuracy: 0.5829\n",
+      "Epoch 4/25\n",
+      "782/782 [==============================] - 194s 248ms/step - loss: 1.2180 - accuracy: 0.5620 - val_loss: 1.1015 - val_accuracy: 0.5992\n",
+      "Epoch 5/25\n",
+      "782/782 [==============================] - 195s 249ms/step - loss: 1.1377 - accuracy: 0.5936 - val_loss: 1.0336 - val_accuracy: 0.6311\n",
+      "Epoch 6/25\n",
+      "782/782 [==============================] - 174s 222ms/step - loss: 1.0848 - accuracy: 0.6138 - val_loss: 1.0378 - val_accuracy: 0.6289\n",
+      "Epoch 7/25\n",
+      "782/782 [==============================] - 87s 112ms/step - loss: 1.0444 - accuracy: 0.6241 - val_loss: 0.9756 - val_accuracy: 0.6498\n",
+      "Epoch 8/25\n",
+      "782/782 [==============================] - 83s 106ms/step - loss: 1.0034 - accuracy: 0.6453 - val_loss: 0.9372 - val_accuracy: 0.6677\n",
+      "Epoch 9/25\n",
+      "782/782 [==============================] - 86s 110ms/step - loss: 0.9818 - accuracy: 0.6510 - val_loss: 0.9041 - val_accuracy: 0.6801\n",
+      "Epoch 10/25\n",
+      "782/782 [==============================] - 81s 104ms/step - loss: 0.9399 - accuracy: 0.6683 - val_loss: 0.8994 - val_accuracy: 0.6830\n",
+      "Epoch 11/25\n",
+      "782/782 [==============================] - 87s 111ms/step - loss: 0.9285 - accuracy: 0.6739 - val_loss: 0.8626 - val_accuracy: 0.6942\n",
+      "Epoch 12/25\n",
+      "782/782 [==============================] - 88s 112ms/step - loss: 0.9033 - accuracy: 0.6805 - val_loss: 0.8676 - val_accuracy: 0.6939\n",
+      "Epoch 13/25\n",
+      "782/782 [==============================] - 88s 113ms/step - loss: 0.8795 - accuracy: 0.6856 - val_loss: 0.8418 - val_accuracy: 0.7049\n",
+      "Epoch 14/25\n",
+      "782/782 [==============================] - 84s 107ms/step - loss: 0.8632 - accuracy: 0.6960 - val_loss: 0.8339 - val_accuracy: 0.7060\n",
+      "Epoch 15/25\n",
+      "782/782 [==============================] - 75s 96ms/step - loss: 0.8483 - accuracy: 0.7013 - val_loss: 0.8606 - val_accuracy: 0.6982\n",
+      "Epoch 16/25\n",
+      "782/782 [==============================] - 57s 73ms/step - loss: 0.8469 - accuracy: 0.7018 - val_loss: 0.8099 - val_accuracy: 0.7189\n",
+      "Epoch 17/25\n",
+      "782/782 [==============================] - 71s 90ms/step - loss: 0.8252 - accuracy: 0.7111 - val_loss: 0.8431 - val_accuracy: 0.7124\n",
+      "Epoch 18/25\n",
+      "782/782 [==============================] - 68s 87ms/step - loss: 0.8144 - accuracy: 0.7152 - val_loss: 0.8456 - val_accuracy: 0.7121\n",
+      "Epoch 19/25\n",
+      "782/782 [==============================] - 72s 92ms/step - loss: 0.7925 - accuracy: 0.7186 - val_loss: 0.7872 - val_accuracy: 0.7296\n",
+      "Epoch 20/25\n",
+      "782/782 [==============================] - 65s 83ms/step - loss: 0.7871 - accuracy: 0.7232 - val_loss: 0.8189 - val_accuracy: 0.7103\n",
+      "Epoch 21/25\n",
+      "782/782 [==============================] - 71s 91ms/step - loss: 0.7831 - accuracy: 0.7226 - val_loss: 0.7829 - val_accuracy: 0.7243\n",
+      "Epoch 22/25\n",
+      "782/782 [==============================] - 69s 88ms/step - loss: 0.7620 - accuracy: 0.7309 - val_loss: 0.8031 - val_accuracy: 0.7181\n",
+      "Epoch 23/25\n",
+      "782/782 [==============================] - 74s 95ms/step - loss: 0.7572 - accuracy: 0.7329 - val_loss: 0.7783 - val_accuracy: 0.7311\n",
+      "Epoch 24/25\n",
+      "782/782 [==============================] - 71s 91ms/step - loss: 0.7585 - accuracy: 0.7336 - val_loss: 0.7706 - val_accuracy: 0.7338\n",
+      "Epoch 25/25\n",
+      "782/782 [==============================] - 64s 82ms/step - loss: 0.7408 - accuracy: 0.7389 - val_loss: 0.7581 - val_accuracy: 0.7371\n"
      ]
     }
    ],
@@ -219,21 +255,28 @@
     "train_x,test_x=prep_pixels(train_x,test_x)\n",
     "# fit model\n",
     "model=define_model()\n",
-    "history = model.fit(train_x, train_y, epochs=10, batch_size=64, validation_data=(test_x, test_y))\n",
+    "history = model.fit(train_x, train_y, epochs=25, batch_size=64, validation_data=(test_x, test_y))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 4s 12ms/step - loss: 0.8925 - accuracy: 0.6936\n",
-      "[0.892464816570282, 0.6935999989509583]\n"
+      "190/313 [=================>............] - ETA: 0s - loss: 0.7499 - accuracy: 0.7446"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 [==============================] - 2s 7ms/step - loss: 0.7581 - accuracy: 0.7371\n",
+      "[0.7580651640892029, 0.7371000051498413]\n"
      ]
     }
    ],
